--- a/src/components/Layout/global.css
+++ b/src/components/Layout/global.css
@@ -16,6 +16,6 @@ html {
 }
 
 body {
-  font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  /* font-size: calc(16px + 6 * ((100vw - 320px) / 680)); */
   font-family: "Roboto";
 }
