--- a/src/components/NewsGrid/NewsGrid.module.scss
+++ b/src/components/NewsGrid/NewsGrid.module.scss
@@ -1,16 +1,18 @@
+$CARD_MIN_WIDTH: 240px;
+
 .news-title {
   margin-bottom: 0.8em;
 }
 
 .news {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+  grid-template-columns: repeat(auto-fit, minmax($CARD_MIN_WIDTH, auto));
   grid-gap: 1em;
   flex-wrap: wrap;
   justify-items: center;
 }
 
 .card {
-  min-width: 240px;
+  min-width: $CARD_MIN_WIDTH;
   max-width: 400px;
 }
