--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -3,6 +3,18 @@
   height: 60px;
 }
 
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .title {
+    font-size: 1.25rem;
+  }
+}
+
 .image {
   width: 100%;
   max-height: 500px;
@@ -11,6 +23,6 @@
 }
 
 .paragraph {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   margin-bottom: 0.8em;
 }
