Align read more buttons to bottom of news cards

--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -1,9 +1,18 @@
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   // Height when title is 3 lines
   min-height: 112px;
 }
 
 .actions {
+  margin-top: auto;
+}
+
+.read-more-button {
   margin-left: auto;
   margin-right: 0.5em;
 }
