--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -31,4 +31,6 @@
 .image {
   height: 0;
   padding-top: 150px;
+  // We assume that the top part of an image is more important than the bottom
+  background-position-y: 10%;
 }
