--- a/src/components/NewsCard/NewsCard.module.scss
+++ b/src/components/NewsCard/NewsCard.module.scss
@@ -29,8 +29,9 @@
 }
 
 .image {
-  height: 0;
-  padding-top: 150px;
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
   // We assume that the top part of an image is more important than the bottom
-  background-position-y: 10%;
+  object-position: 0 10%;
 }
